<resources>
    <string name="app_name">BrickyClimb</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="exit_button">Exit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="scores_button">Scores</string>
    <string name="music_switch">Music</string>
    <string name="effects_switch">Effects</string>
    <string name="rotation_radio_button">Rotation</string>
    <string name="touch_radio_button">Touch</string>
    <string name="connection_button">Connection</string>
    <string name="calibration_button">Calibrate</string>
    <string name="score">Score:</string>
    <string name="controls_rotation">rotation</string>
    <string name="controls_touch">Touch</string>
    <string name="askUsername_text">Username</string>
    <string name="showScore_text">Your score is </string>
    <string name="save_button">Save score</string>
    <string name="error_text">Error: Enter your username</string>
    <string name="highScore_text">High score: </string>
    <string name="nbGame_text">Games: </string>
    <string name="resetScoresButton">Reset high scores</string>
</resources>
